Use StormServer and StormClient for login confguration

--- a/conf/jaas_kerberos.conf
+++ b/conf/jaas_kerberos.conf
@@ -1,4 +1,4 @@
-Server {
+StormServer {
        com.sun.security.auth.module.Krb5LoginModule required
        useKeyTab=true
        keyTab="/etc/nimbus_server.keytab"
@@ -6,7 +6,7 @@ Server {
        useTicketCache=false
        principal="nimbus_server/carcloth.corp.yahoo.com@STORM.CORP.YAHOO.COM";
 };
-Client {
+StormClient {
        com.sun.security.auth.module.Krb5LoginModule required
        useKeyTab=true
        keyTab="/etc/nimbus_client.keytab"
