use 'serviceName' for Kerberos client login

--- a/conf/jaas_kerberos.conf
+++ b/conf/jaas_kerberos.conf
@@ -12,7 +12,7 @@ StormClient {
        keyTab="/etc/nimbus_client.keytab"
        storeKey=true
        useTicketCache=false
-       servicePrincipal="nimbus_server/carcloth.corp.yahoo.com@STORM.CORP.YAHOO.COM"
+       serviceName="nimbus_server"
        principal="nimbus_client@STORM.CORP.YAHOO.COM";
 };
 
