enable kerberos login w/o keytab; avoid silent failures

--- a/conf/jaas_kerberos.conf
+++ b/conf/jaas_kerberos.conf
@@ -8,11 +8,8 @@ StormServer {
 };
 StormClient {
        com.sun.security.auth.module.Krb5LoginModule required
-       useKeyTab=true
-       keyTab="/etc/nimbus_client.keytab"
-       storeKey=true
-       useTicketCache=false
-       serviceName="nimbus_server"
-       principal="nimbus_client@STORM.CORP.YAHOO.COM";
+       doNotPrompt=true
+       useTicketCache=true
+       serviceName="nimbus_server";
 };
 
