--- a/log4j/storm.log.properties
+++ b/log4j/storm.log.properties
@@ -1,9 +1,15 @@
 log4j.rootLogger=INFO, A1
-
-
 log4j.appender.A1 = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.A1.File = ${storm.home}/logs/${logfile.name}
 log4j.appender.A1.Append = true
 log4j.appender.A1.DatePattern = '.'yyy-MM-dd
 log4j.appender.A1.layout = org.apache.log4j.PatternLayout
 log4j.appender.A1.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
+
+log4j.logger.backtype.storm.security.auth.NoopAuthorizer=INFO, ACCESS
+log4j.appender.ACCESS = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.ACCESS.File = ${storm.home}/logs/access.log
+log4j.appender.ACCESS.Append = true
+log4j.appender.ACCESS.DatePattern = '.'yyy-MM-dd
+log4j.appender.ACCESS.layout = org.apache.log4j.PatternLayout
+log4j.appender.ACCESS.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %c{1} [%p] %m%n
