Ok now we actually have a state file that is generated correctly (although with an ugly hack to make it work)

--- a/yahoo-build/Makefile
+++ b/yahoo-build/Makefile
@@ -1,7 +1,10 @@
 #This is for updateing the state file.  I hate that we have to have --no-validate, but there are issues with svnlite/ysvn :(
 rhel4_build.state: rhel4_build.yidf  rhel4_build.yml
-	rm -f rhel4_build.state rhel4_build.ruleset
+	rm -f rhel4_build.state rhel4_build.state.tmp rhel4_build.ruleset
 	statecc --branch test --no-validate ./rhel4_build.yml
+	grep -v svnlite rhel4_build.state > rhel4_build.state.tmp
+	mv -f rhel4_build.state.tmp rhel4_build.state
+	statecc-validate-state rhel4_build.state
 
 clean:
 	rm -rf rhel4_build.ruleset
