Switched over to mvn from lein.

--- a/yahoo-build/Makefile
+++ b/yahoo-build/Makefile
@@ -7,14 +7,11 @@ MVN=LD_LIBRARY_PATH=/home/y/lib64 /home/y/bin/mvn
 all: build
 
 test: build
-	cd .. && $(LEIN) with-profile dev test
-	cd .. && $(LEIN) with-profile dev junit
+	cd .. && $(MVN) -f m2-pom.xml test
 
 build:
-	cd .. && $(LEIN) with-profile dev deps
-	cd .. && $(LEIN) with-profile dev jar
-	cd .. && $(LEIN) pom
-	cd .. && $(MVN) dependency:copy-dependencies
+	cd .. && $(MVN) -f m2-pom.xml package -DskipTests
+	cd .. && $(MVN) -f m2-pom.xml dependency:copy-dependencies
 
 #TODO need a good way to see if these values would have changed and update only then
 BASE_VERSION: ../project.clj
@@ -41,7 +38,7 @@ rhel4_build.state: rhel4_build.yidf  rhel4_build.yml
 
 clean:
 	rm -rf rhel4_build.ruleset ystorm*.tgz BASE_VERSION RELEASE
-	cd .. && $(LEIN) clean
+	cd .. && $(MVN) -f m2-pom.xml clean
 
 
 #BuildyBlocks targets
