--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -36,6 +36,7 @@ nimbus.topology.validator: "backtype.storm.nimbus.DefaultTopologyValidator"
 ### ui.* configs are for the master
 ui.port: 8080
 ui.childopts: "-Xmx768m"
+ui.actions.enabled: true
 
 drpc.port: 3772
 drpc.worker.threads: 64
