Renamed the native executable to be more appropriate.

--- a/yahoo-build/Makefile
+++ b/yahoo-build/Makefile
@@ -8,13 +8,13 @@ EXEC_CONF_DIR?=/home/y/conf/storm/
 all: build
 
 test:
-	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dcontainer-executor.conf.dir=${EXEC_CONF_DIR} package ${MVN_MAKE_OPTS}
+	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dworker-launcher.conf.dir=${EXEC_CONF_DIR} package ${MVN_MAKE_OPTS}
 
 build:
-	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dcontainer-executor.conf.dir=${EXEC_CONF_DIR} package -DskipTests ${MVN_MAKE_OPTS}
+	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dworker-launcher.conf.dir=${EXEC_CONF_DIR} package -DskipTests ${MVN_MAKE_OPTS}
 
 install:
-	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dcontainer-executor.conf.dir=${EXEC_CONF_DIR} install -DskipTests ${MVN_MAKE_OPTS}
+	cd .. && $(MVN) -f m2-pom.xml -Pnative -Dworker-launcher.conf.dir=${EXEC_CONF_DIR} install -DskipTests ${MVN_MAKE_OPTS}
 
 #TODO need a good way to see if these values would have changed and update only then
 BASE_VERSION: ../project.clj
