--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -18,6 +18,7 @@ storm.zookeeper.retry.intervalceiling.millis: 30000
 storm.cluster.mode: "distributed" # can be distributed or local
 storm.local.mode.zmq: false
 storm.thrift.transport: "backtype.storm.security.auth.SimpleTransportPlugin"
+storm.principal.tolocal: "backtype.storm.security.auth.DefaultPrincipalToLocal"
 
 ### nimbus.* configs are for the master
 nimbus.host: "localhost"
@@ -56,6 +57,7 @@ supervisor.slots.ports:
     - 6702
     - 6703
 supervisor.childopts: "-Xmx256m"
+supervisor.run.worker.as.user: false
 #how long supervisor will wait to ensure that a worker process is started
 supervisor.worker.start.timeout.secs: 120
 #how long between heartbeats until supervisor considers that worker dead and tries to restart it
