Bugfix for bug Ticket# 6277327, where supervisor dies on connection error to Nimbus. Added bounded exponential back-off reconnect tries similar to CuratorFramework's for connections to Zookeeper.

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -19,6 +19,10 @@ storm.cluster.mode: "distributed" # can be distributed or local
 storm.local.mode.zmq: false
 storm.thrift.transport: "backtype.storm.security.auth.SimpleTransportPlugin"
 storm.messaging.transport: "backtype.storm.messaging.zmq"
+storm.nimbus.retry.times: 5
+storm.nimbus.retry.interval: 2000
+storm.nimbus.retry.intervalceiling.millis: 60000
+storm.nimbus.retry.randomrange.millis: 5000
 
 ### nimbus.* configs are for the master
 nimbus.host: "localhost"
