--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -20,7 +20,7 @@ storm.local.mode.zmq: false
 storm.thrift.transport: "backtype.storm.security.auth.SimpleTransportPlugin"
 storm.messaging.transport: "backtype.storm.messaging.zmq"
 storm.nimbus.retry.times: 5
-storm.nimbus.retry.interval: 2000
+storm.nimbus.retry.interval.millis: 2000
 storm.nimbus.retry.intervalceiling.millis: 60000
 storm.nimbus.retry.randomrange.millis: 5000
 
