Add ThriftServerPurpose enum for numThreads conf

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -26,6 +26,7 @@ storm.nimbus.retry.intervalceiling.millis: 60000
 ### nimbus.* configs are for the master
 nimbus.host: "localhost"
 nimbus.thrift.port: 6627
+nimbus.thrift.threads: 64
 nimbus.childopts: "-Xmx1024m"
 nimbus.task.timeout.secs: 30
 nimbus.supervisor.timeout.secs: 60
