--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -22,6 +22,8 @@ storm.messaging.transport: "backtype.storm.messaging.zmq"
 storm.nimbus.retry.times: 5
 storm.nimbus.retry.interval.millis: 2000
 storm.nimbus.retry.intervalceiling.millis: 60000
+storm.auth.simple-white-list.admins: "evans,derekd"
+storm.auth.simple-white-list.users.commands: "submitTopology"
 
 ### nimbus.* configs are for the master
 nimbus.host: "localhost"
@@ -69,6 +71,7 @@ supervisor.monitor.frequency.secs: 3
 #how frequently the supervisor heartbeats to the cluster state (for nimbus)
 supervisor.heartbeat.frequency.secs: 5
 supervisor.enable: true
+supervisor.supervisors: "admin"
 
 ### worker.* configs are for task workers
 worker.childopts: "-Xmx768m"
