--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>storm</groupId>
       <artifactId>libthrift7</artifactId>
-      <version>0.7.0</version>
+      <version>0.7.0-2</version>
       <exclusions>
         <exclusion>
           <groupId>org.slf4j</groupId>
