--- a/storm-core/src/native/worker-launcher/.autom4te.cfg
+++ b/storm-core/src/native/worker-launcher/.autom4te.cfg
@@ -17,7 +17,7 @@
 #
 
 #
-# autom4te configuration for hadoop utils library
+# autom4te configuration for worker-launcher
 #
 
 begin-language: "Autoheader-preselections"
