--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -222,6 +222,11 @@
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
+      <artifactId>tools.reader</artifactId>
+      <version>0.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
       <artifactId>data.codec</artifactId>
       <version>0.1.0</version>
     </dependency>
