--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -53,6 +53,7 @@ ui.actions.enabled: true
 ui.filter: null
 ui.filter.params: null
 ui.users: null
+ui.users.whitelists.path: null
 
 logviewer.port: 8000
 logviewer.childopts: "-Xmx128m"
