Add logs table back to the UI

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -53,10 +53,12 @@ ui.actions.enabled: true
 ui.filter: null
 ui.filter.params: null
 ui.users: null
-ui.users.whitelists.path: null
 
 logviewer.port: 8000
 logviewer.childopts: "-Xmx128m"
+
+logs.users: null
+logs.users.path: null
 
 
 drpc.port: 3772
