--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -21,7 +21,6 @@ storm.cluster.mode: "distributed" # can be distributed or local
 storm.local.mode.zmq: false
 storm.thrift.transport: "backtype.storm.security.auth.SimpleTransportPlugin"
 storm.principal.tolocal: "backtype.storm.security.auth.DefaultPrincipalToLocal"
-storm.messaging.transport: "backtype.storm.messaging.zmq"
 storm.nimbus.retry.times: 5
 storm.nimbus.retry.interval.millis: 2000
 storm.nimbus.retry.intervalceiling.millis: 60000
@@ -103,6 +102,15 @@ task.refresh.poll.secs: 10
 zmq.threads: 1
 zmq.linger.millis: 5000
 zmq.hwm: 0
+
+storm.messaging.netty.server_worker_threads: 1
+storm.messaging.netty.client_worker_threads: 1
+storm.messaging.netty.buffer_size: 5242880 #5MB buffer
+storm.messaging.netty_max_retries: 100
+storm.messaging.netty_max_wait_ms: 1000
+storm.messaging.netty_min_wait_ms: 100
+storm.messaging.transport: "backtype.storm.messaging.netty.Context"
+
 
 ### topology.* configs are for specific executing storms
 topology.enable.message.timeouts: true
