--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -21,6 +21,7 @@ storm.cluster.mode: "distributed" # can be distributed or local
 storm.local.mode.zmq: false
 storm.thrift.transport: "backtype.storm.security.auth.SimpleTransportPlugin"
 storm.principal.tolocal: "backtype.storm.security.auth.DefaultPrincipalToLocal"
+storm.messaging.transport: "backtype.storm.messaging.zmq"
 storm.nimbus.retry.times: 5
 storm.nimbus.retry.interval.millis: 2000
 storm.nimbus.retry.intervalceiling.millis: 60000
@@ -109,7 +110,6 @@ storm.messaging.netty.buffer_size: 5242880 #5MB buffer
 storm.messaging.netty_max_retries: 100
 storm.messaging.netty_max_wait_ms: 1000
 storm.messaging.netty_min_wait_ms: 100
-storm.messaging.transport: "backtype.storm.messaging.netty.Context"
 
 
 ### topology.* configs are for specific executing storms
