--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -108,6 +108,11 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.clojure</groupId>
+      <artifactId>data.codec</artifactId>
+      <version>0.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>clj-time</groupId>
       <artifactId>clj-time</artifactId>
       <version>0.4.1</version>
