--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -108,9 +108,9 @@ zmq.hwm: 0
 storm.messaging.netty.server_worker_threads: 1
 storm.messaging.netty.client_worker_threads: 1
 storm.messaging.netty.buffer_size: 5242880 #5MB buffer
-storm.messaging.netty_max_retries: 100
-storm.messaging.netty_max_wait_ms: 1000
-storm.messaging.netty_min_wait_ms: 100
+storm.messaging.netty.max_retries: 100
+storm.messaging.netty.max_wait_ms: 1000
+storm.messaging.netty.min_wait_ms: 100
 
 
 ### topology.* configs are for specific executing storms
