Squashed commit of the following:
commit f27701f3b463f890059a26665fea697554fcef3c
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Fri Nov 8 18:23:55 2013 +0000

    log cleanup logic fix, avoid NPE when no heartbeat

commit 21d28d648f84d31fd176027b4bec3ac2ec6fd459
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Fri Nov 8 17:23:07 2013 +0000

    Fix bug: metadata files not being cleaned up

commit 94166cf28eb130a95d377503c48dd9c2229b4588
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Fri Nov 8 17:22:23 2013 +0000

    Add a 1/day worker log cleanup default in yinst

commit e85a43f6caba9d08b416c88b3b9df60209672e22
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Fri Nov 8 16:08:32 2013 +0000

    log clean-up completed, added tests for edge-cases

commit f87e6dfab0a61881a1011848a91e1e71094f814f
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Fri Nov 8 04:35:17 2013 +0000

    Completed code for timer, fixed supervisor test

commit e077ecc1e50a1dc441230c8f55434f6680c28ad7
Author: Derek Dagit <derekd@yahoo-inc.com>
Date:   Thu Nov 7 20:40:31 2013 +0000

    New test for logviewer, working FileFilter test

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -57,6 +57,7 @@ ui.header.buffer.bytes: 4096
 
 logviewer.port: 8000
 logviewer.childopts: "-Xmx128m"
+logviewer.cleanup.age.mins: 10080
 
 logs.users: null
 
