Provide Additional String substitutions for *.worker.childopts

--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -222,6 +222,12 @@
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
+      <artifactId>clojure-contrib</artifactId>
+      <version>1.2.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.clojure</groupId>
       <artifactId>data.codec</artifactId>
       <version>0.1.0</version>
     </dependency>
