--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -138,6 +138,17 @@
       <groupId>ring</groupId>
       <artifactId>ring-jetty-adapter</artifactId>
       <version>0.3.11</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.mortbay.jetty</groupId>
+          <artifactId>servlet-api</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
     </dependency>
     <dependency>
       <groupId>org.clojure</groupId>
