--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -45,6 +45,7 @@ nimbus.task.launch.secs: 120
 nimbus.reassign: true
 nimbus.file.copy.expiration.secs: 600
 nimbus.topology.validator: "backtype.storm.nimbus.DefaultTopologyValidator"
+nimbus.credential.renewers.freq.secs: 600
 
 ### ui.* configs are for the master
 ui.port: 8080
