Add ability for users to configure GC on workers.

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -72,6 +72,7 @@ supervisor.enable: true
 
 ### worker.* configs are for task workers
 worker.childopts: "-Xmx768m"
+worker.gc.childopts: ""
 worker.heartbeat.frequency.secs: 1
 
 task.heartbeat.frequency.secs: 3
