--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -68,6 +68,7 @@ drpc.queue.size: 128
 drpc.invocations.port: 3773
 drpc.request.timeout.secs: 600
 drpc.childopts: "-Xmx768m"
+drpc.http.port: 3774
 
 transactional.zookeeper.root: "/transactional"
 transactional.zookeeper.servers: null
