Add IHttpCredentialsPlugin, and hook into logviewer, ui, drpc

--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -55,10 +55,12 @@ ui.filter: null
 ui.filter.params: null
 ui.users: null
 ui.header.buffer.bytes: 4096
+ui.http.creds.plugin: backtype.storm.security.auth.DefaultHttpCredentialsPlugin
 
 logviewer.port: 8000
 logviewer.childopts: "-Xmx128m"
 logviewer.cleanup.age.mins: 10080
+logviewer.http.creds.plugin: backtype.storm.security.auth.DefaultHttpCredentialsPlugin
 
 logs.users: null
 
@@ -69,6 +71,7 @@ drpc.invocations.port: 3773
 drpc.request.timeout.secs: 600
 drpc.childopts: "-Xmx768m"
 drpc.http.port: 3774
+drpc.http.creds.plugin: backtype.storm.security.auth.DefaultHttpCredentialsPlugin
 
 transactional.zookeeper.root: "/transactional"
 transactional.zookeeper.servers: null
