Changed DRPC ACL to have single user for invocations
Also expanded the test scenario to have two client users.

--- a/storm-core/src/dev/resources/drpc-simple-acl-test-scenario.yaml
+++ b/storm-core/src/dev/resources/drpc-simple-acl-test-scenario.yaml
@@ -4,5 +4,5 @@ drpc.authorizer.acl:
   "jump":
     "client.users":
       - "alice"
-    "invocation.users":
       - "bob"
+    "invocation.user": "charlie"
