--- a/storm-yahoo/pom.xml
+++ b/storm-yahoo/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>storm</groupId>
-  <artifactId>storm-yahoo</artifactId>
+  <artifactId>storm_yahoo</artifactId>
   <packaging>jar</packaging>
   <version>0.9.0-wip21</version>
-  <name>storm-yahoo</name>
+  <name>storm_yahoo</name>
   <description/>
 
   <properties>
@@ -52,8 +52,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.0</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
