Allow principal to local in DRPC ACL too.

--- a/storm-core/src/dev/drpc-simple-acl-test-scenario.yaml
+++ b/storm-core/src/dev/drpc-simple-acl-test-scenario.yaml
@@ -6,3 +6,6 @@ drpc.authorizer.acl:
       - "alice"
       - "bob"
     "invocation.user": "charlie"
+  "partial":
+    "client.users":
+      - "alice"
