--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -184,9 +184,9 @@
       <version>0.0.1</version>
     </dependency>
     <dependency>
-      <groupId>storm</groupId>
+      <groupId>com.twitter</groupId>
       <artifactId>carbonite</artifactId>
-      <version>1.5.0</version>
+      <version>1.4.0</version>
     </dependency>
     <dependency>
       <groupId>org.yaml</groupId>
