--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -155,5 +155,6 @@ topology.max.error.report.per.interval: 5
 topology.kryo.factory: "backtype.storm.serialization.DefaultKryoFactory"
 topology.tuple.serializer: "backtype.storm.serialization.types.ListDelegateSerializer"
 topology.trident.batch.emit.interval.millis: 500
+topology.testing.always.try.serialize: false
 
 dev.zookeeper.path: "/tmp/dev-storm-zookeeper"
