--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -287,6 +287,10 @@
           <testSourceDirectories>
             <testSourceDirectory>test/clj</testSourceDirectory>
           </testSourceDirectories>
+          <copyDeclaredNamespaceOnly>true</copyDeclaredNamespaceOnly>
+          <copiedNamespaces>
+            <copiedNamespace>none</copiedNamespace>
+          </copiedNamespaces>
         </configuration>
         <executions>
           <execution>
