--- a/storm-netty-mvn/pom.xml
+++ b/storm-netty-mvn/pom.xml
@@ -43,6 +43,10 @@
           <testSourceDirectories>
             <testSourceDirectory>test/clj</testSourceDirectory>
           </testSourceDirectories>
+          <copyDeclaredNamespaceOnly>true</copyDeclaredNamespaceOnly>
+          <copiedNamespaces>
+            <copiedNamespace>none</copiedNamespace>
+          </copiedNamespaces>
         </configuration>
         <executions>
           <execution>
