STORM-342: Message loss, executor hang, or message disorder due to contention in Disruptor queue under multi-thread mode.
Conflicts:
	storm-core/pom.xml
	storm-core/src/jvm/backtype/storm/utils/DisruptorQueue.java

--- a/storm-core-mvn/pom.xml
+++ b/storm-core-mvn/pom.xml
@@ -251,6 +251,12 @@
       <artifactId>data.codec</artifactId>
       <version>0.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
