--- a/storm-yahoo/pom.xml
+++ b/storm-yahoo/pom.xml
@@ -1,13 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-      <artifactId>storm</artifactId>
-      <groupId>org.apache.storm</groupId>
-      <version>0.9.2-incubating-security</version>
-  </parent>
-  <groupId>storm</groupId>
+  <groupId>yahoo.yinst.ystorm</groupId>
   <artifactId>storm_yahoo</artifactId>
   <packaging>jar</packaging>
+  <version>0.9.2-incubating-security</version>
   <name>storm_yahoo</name>
   <description/>
 
@@ -194,7 +190,7 @@
   </repositories>
   <dependencies>
     <dependency>
-      <groupId>storm</groupId>
+      <groupId>org.apache.storm</groupId>
       <artifactId>storm-core</artifactId>
       <version>0.9.2-incubating-security</version>
       <exclusions>
