Updated packaging to include everything except unjared examples.

--- a/examples/storm-starter/pom.xml
+++ b/examples/storm-starter/pom.xml
@@ -160,6 +160,20 @@
           <mainClass>${storm.topology}</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <!-- avoid warning about recursion -->
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
