--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -48,6 +48,7 @@ storm.auth.simple-acl.users: []
 storm.auth.simple-acl.users.commands: []
 storm.auth.simple-acl.admins: []
 storm.blobstore.inputstream.buffer.size.bytes: 65536
+storm.meta.serialization.delegate: "backtype.storm.serialization.DefaultSerializationDelegate"
 
 ### nimbus.* configs are for the master
 nimbus.host: "localhost"
