--- a/storm-core/pom.xml
+++ b/storm-core/pom.xml
@@ -58,6 +58,17 @@
         <dependency>
             <groupId>ring</groupId>
             <artifactId>ring-jetty-adapter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mortbay.jetty</groupId>
+                    <artifactId>servlet-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
         <dependency>
             <groupId>org.clojure</groupId>
