--- a/yahoo-build/Makefile
+++ b/yahoo-build/Makefile
@@ -36,6 +36,7 @@ RELEASE: BASE_VERSION_UNDERSCORE
 testpkg: RELEASE BASE_VERSION build
 	cd .. && ${MVN} versions:set -DnewVersion=$(MVN_FULL_VERSION)
 	cd .. && ${MVN} versions:update-child-modules
+	cd .. && find . -name pom.xml | xargs git update-index --assume-unchanged
 	yinst_create --buildtype test ystorm.yicf
 	cd .. && ${MVN} versions:revert
 	cd .. && ${MVN} versions:update-child-modules
@@ -44,6 +45,7 @@ testpkg: RELEASE BASE_VERSION build
 package: RELEASE build
 	cd .. && ${MVN} versions:set -DnewVersion=$(MVN_FULL_VERSION)
 	cd .. && ${MVN} versions:update-child-modules
+	cd .. && find . -name pom.xml | xargs git update-index --assume-unchanged
 	yinst_create --buildtype release ystorm.yicf
 	cd .. && ${MVN} versions:revert
 	cd .. && ${MVN} versions:update-child-modules
