--- a/screwdriver/config.json
+++ b/screwdriver/config.json
@@ -29,16 +29,16 @@
                     "group": "hadoopqa",
                     "type": "release",
 		    "before" : [
-			"mvn versions:set -Dnewversion=`cat $SRC_DIR/yahoo-build/RELEASE`",
-			"mvn versions:update-child-modules",
-			"find . -name pom.xml | xargs git update-index --assume unchanged"
+			"cd $SRC_DIR && mvn versions:set -Dnewversion=`cat $SRC_DIR/yahoo-build/RELEASE`",
+			"cd $SRC_DIR && mvn versions:update-child-modules",
+			"cd $SRC_DIR && find . -name pom.xml | xargs git update-index --assume unchanged"
 		    ],
                     "yicf": [
                         "yahoo-build/ystorm.yicf"
                     ],
 		    "after" : [
-			"mvn versions:revert",
-			"mvn versions:update-child-modules",
+			"cd $SRC_DIR && mvn versions:revert",
+			"cd $SRC_DIR && mvn versions:update-child-modules",
 			"git tag -f -a `cat $SRC_DIR/yahoo-build/RELEASE` -m \"yahoo version `cat $SRC_DIR/yahoo-build/RELEASE`\"",
 			"git push origin `cat $SRC_DIR/yahoo-build/RELEASE`"
 		    ]
