Try this by using sd specific target

--- a/yahoo-build/Makefile
+++ b/yahoo-build/Makefile
@@ -42,6 +42,14 @@ testpkg: RELEASE BASE_VERSION build
 	cd .. && ${MVN} versions:update-child-modules
 
 	
+# This target is called from screwdriver build and leaves the poms changed for its
+# publish phase
+package-sd: RELEASE build
+	cd .. && ${MVN} versions:set -DnewVersion=$(MVN_FULL_VERSION)
+	cd .. && ${MVN} versions:update-child-modules
+	cd .. && find . -name pom.xml | xargs git update-index --assume-unchanged
+	yinst_create --buildtype release ystorm.yicf
+
 package: RELEASE build
 	cd .. && ${MVN} versions:set -DnewVersion=$(MVN_FULL_VERSION)
 	cd .. && ${MVN} versions:update-child-modules
