--- a/screwdriver/config.json
+++ b/screwdriver/config.json
@@ -20,7 +20,8 @@
                     ],
 		    "after" : [
 			"git tag -f -a `cat $SRC_DIR/yahoo-build/RELEASE` -m \"yahoo version `cat $SRC_DIR/yahoo-build/RELEASE`\"",
-			"git push origin `cat $SRC_DIR/yahoo-build/RELEASE`"
+			"git push origin `cat $SRC_DIR/yahoo-build/RELEASE`",
+			"${SRC_DIR}/internal/QATools/storm_tag_master_launcher"
 		    ]
                 }
             }
