Switch to storm_tools branch

--- a/screwdriver/config.json
+++ b/screwdriver/config.json
@@ -23,6 +23,9 @@
 			"git push origin `cat $SRC_DIR/yahoo-build/RELEASE`",
 			"${SRC_DIR}/internal/QATools/storm_tag_master_launcher"
 		    ]
+                },
+                 "remote_trigger": {
+                                    "url": "http://re101.ygrid.corp.gq1.yahoo.com:9999/yhudson/job/ystorm_qe_assembly/build?token=HDP"
                 }
             }
         }
