exclude netty from curator dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,10 @@
                         <artifactId>log4j</artifactId>
                         <groupId>log4j</groupId>
                     </exclusion>
+                    <exclusion>
+                        <artifactId>netty</artifactId>
+                        <groupId>org.jboss.netty</groupId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
