--- a/conf/defaults.yaml
+++ b/conf/defaults.yaml
@@ -188,5 +188,6 @@ topology.trident.batch.emit.interval.millis: 500
 topology.testing.always.try.serialize: false
 topology.classpath: null
 topology.environment: null
+topology.bolts.use.overflow.buffer: true
 
 dev.zookeeper.path: "/tmp/dev-storm-zookeeper"
