Adds byte search to logviewer via new REST call

--- a/storm-core/pom.xml
+++ b/storm-core/pom.xml
@@ -249,6 +249,7 @@
                     </sourceDirectories>
                     <testSourceDirectories>
                         <testSourceDirectory>test/clj</testSourceDirectory>
+                        <testSourceDirectory>src/dev</testSourceDirectory>
                     </testSourceDirectories>
                     <warnOnReflection>false</warnOnReflection>
                     <copyDeclaredNamespaceOnly>true</copyDeclaredNamespaceOnly>
